# google_docs_to_md

./: .gitignore  README.md  config.yaml  pyproject.toml
jira/: jira-001.md  jira-002.md  jira-003.md  jira-004.md
src/: main.py
tests/: test_main.py
